--- a/package.json
+++ b/package.json
@@ -1,44 +1,30 @@
 {
-	"name": "",
-	"description": "",
-	"version": "0.0.1",
-	"engines": {
-	    "node": "v0.11.x",
-	    "npm":  "1.3.x"
-  	},
-	"private": true,
-	"dependencies": {
-		"koa-json-response": "x.x",
-		"socket.io": "x.x",
-		"sequelize": "x.x",
-		"request": "x.x",
-		"thunkify": "x.x",
-		"co": "x.x",
-		"nodemailer": "x.x",
-		"underscore": "x.x",
-		"mysql": "x.x",
-		"co-views": "x.x",
-		"co-body": "x.x",
-		"koa": "x.x",
-		"koa-logger": "x.x",
-		"koa-route": "x.x",
-		"koa-router": "x.x",
-		"koa-static": "x.x",
-		"koa-generic-session": "x.x",
-		"swig": "x.x",
-		"bcryptjs": "x.x",
-		"save-to": "x.x",
-		"co-fs": "x.x",
-		"co-busboy": "x.x",
-		"koa-send": "x.x",
-		"koa-passport": "x.x",
-		"passport-local": "x.x",
-		"passport-facebook": "x.x",
-		"passport-twitter": "x.x",
-		"passport-google": "x.x",
-		"stripe": "x.x",
-		"koa-bodyparser": "x.x",
-		"koa-sess":"x.x"
-	},
-	"testing": "mocha"
+  "name": "node-startingLine",
+  "version": "0.0.0",
+  "description": "nodejs web app starting skeleton",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TrevorDev/node-startingLine"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/TrevorDev/node-startingLine/issues"
+  },
+  "homepage": "https://github.com/TrevorDev/node-startingLine",
+  "dependencies": {
+    "co-body": "^1.2.0",
+    "co-request": "^0.2.1",
+    "co-views": "^0.3.0",
+    "koa": "^0.20.0",
+    "koa-json-response": "0.0.2",
+    "koa-router": "^4.3.2",
+    "koa-static": "^1.4.9",
+    "socket.io": "^1.3.5",
+    "swig": "^1.4.2"
+  }
 }
